--- a/restoredrapp/src/main/resources/templates/fragments/header.html
+++ b/restoredrapp/src/main/resources/templates/fragments/header.html
@@ -8,15 +8,29 @@
     </button>
     <div class="collapse navbar-collapse" id="topNavbar">
       <ul class="navbar-nav">
+      
       	<!-- A menu link to lists order types -->
+      	
         <li class="nav-item">
           <a class="nav-link" th:href="@{/ordertype/list}">Order Types</a>
         </li>
         
         <!-- A menu link to add a new order type -->
-        <!-- <li class="nav-item">
+        
+        <li class="nav-item">
           <a class="nav-link" th:href="@{/ordertype/0}">Add New Order Type</a>
-        </li> -->
+        </li>
+        
+        
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{/producttype/list}">Product Types</a>
+        </li>
+        
+        <!-- A menu link to add a new product type -->
+        
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{/producttype/0}">Add New Product Type</a>
+        </li>
         
       </ul>
     </div>
